--- a/blog/assets/css/main.scss
+++ b/blog/assets/css/main.scss
@@ -4,20 +4,20 @@
 
 @import
 
-    "./skins/{{ site.text_skin | default: site.data.variables.default.text_skin }}",
-    // "./skins/chocolate",
-    // "./skins/dark",
-    // "./skins/default",
-    // "./skins/forest",
-    // "./skins/ocean",
-    // "./skins/orange",
+    "skins/{{ site.text_skin | default: site.data.variables.default.text_skin }}",
+    // "skins/chocolate",
+    // "skins/dark",
+    // "skins/default",
+    // "skins/forest",
+    // "skins/ocean",
+    // "skins/orange",
 
-    "./skins/highlight/{{ site.highlight_theme | default: site.data.variables.default.highlight_theme }}",
-    // "./skins/highlight/tomorrow",
-    // "./skins/highlight/tomorrow-night",
-    // "./skins/highlight/tomorrow-night-eighties",
-    // "./skins/highlight/tomorrow-night-blue",
-    // "./skins/highlight/tomorrow-night-bright",
+    "skins/highlight/{{ site.highlight_theme | default: site.data.variables.default.highlight_theme }}",
+    // "skins/highlight/tomorrow",
+    // "skins/highlight/tomorrow-night",
+    // "skins/highlight/tomorrow-night-eighties",
+    // "skins/highlight/tomorrow-night-blue",
+    // "skins/highlight/tomorrow-night-bright",
 
 
     "common/variables",
